Fix the overlapping on the landing page

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -59,6 +59,7 @@ body {
 .navbar-inverse {
   background-color: #000000;
   border: none;
+  margin-bottom: 3em;
 }
 
 .showpic {
